# OpenYiLa

./: README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
openyila/: __init__.py  cli.py  client.py  device.py  i18n.py  mcp_server.py  protocol.py  scanner.py
